@@ -1,4 +1,4 @@
-/* Copyright (C) 2006
+/* Copyright (C) 2006, 2007, 2008
  * Free Software Foundation, Inc.
  *
  *  Gaius Mulley <gaius@glam.ac.uk> constructed this file.
@@ -25,3 +25,6 @@ Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston, MA
 /* A SET_TYPE type */
 DEFTREECODE (SET_TYPE, "set_type", tcc_type, 0)
 
+/* Throw statement.
+   Operand 0 is the throw expression.  Which will be void in Modula-2 */
+DEFTREECODE (THROW_EXPR, "throw", tcc_unary, 1)
